[package]
name = "stringy"
version = "0.2.3"
edition = "2018"
authors = ["Lictor Guzman <lctrgzmn@gmail.com>"]
readme = "README.md"
repository = "https://github.com/lctr/stringy"
license = "MIT"
keywords = ["strings", "lexemes"]
description = "A tiny Rust crate for generating byte-sized enums that represent a fixed, ordered set of &str data."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
